still fixing text overlap

--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ body {
     height: 75vh;
     width: 100%;
     color: white;
+    padding-bottom: 50px;
 }
 
 .projectTitle {
